--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ sass:
   style: compressed
 
 # The base hostname & protocol of your site for where absolute urls are needed
-url: "https://noplanlife.github.io"
+url: "http://noplanlife.com"
 
 # Site navigation - each item must have a title and a url.
 navigation:
