--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ sass:
   style: compressed
 
 # The base hostname & protocol of your site for where absolute urls are needed
-url: "http://noplanlife.com"
+url: "https://noplanlife.com"
 
 # Site navigation - each item must have a title and a url.
 navigation:
@@ -45,7 +45,7 @@ disqus: "noplanlife"
 # Author information - author info at the bottom of the post
 author_name: "June Park"
 author_bio: "June Park is a security analyst at NAVER Corp. and a graduate student of SANE Lab in Korea university."
-author_url:  "http://noplanlife.com"
+author_url:  "https://noplanlife.com"
 author_location: "Seoul, Korea"
 author_image: /images/authorimage.jpeg
 
